==> kbumsik/Quadcopter-Flight-Controller/libraries&settings/TM_STM32_HAL_LIBRARIES_modified/tm_stm32_usart.c <==
#include "tm_stm32_usart.h"

static void TM_USART_INT_Init(
	USART_TypeDef* USARTx,
	TM_USART_PinsPack_t pinspack,
	uint32_t baudrate,
	TM_USART_HardwareFlowControl_t FlowControl,
	uint32_t Mode,
	uint32_t Parity,
	uint32_t StopBits,
	uint32_t WordLength
) {
	UART_HandleTypeDef UARTHandle;
	TM_USART_t* u = TM_USART_INT_GetUsart(USARTx);
	IRQn_Type irq;

	/*
	 * Initialize USARTx pins
	 * Set channel for USARTx NVIC
	 */
#ifdef USART1
	if (USARTx == USART1) {
		/* Enable USART clock */
		__HAL_RCC_USART1_CLK_ENABLE();
		
		/* Init pins */
		TM_USART1_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = USART1_IRQn;
	}
#endif
#ifdef USART2
	if (USARTx == USART2) {
		/* Enable USART clock */
		__HAL_RCC_USART2_CLK_ENABLE();
		
		/* Init pins */
		TM_USART2_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = USART2_IRQn;
	}
#endif
#ifdef USART3
	if (USARTx == USART3) {
		/* Enable USART clock */
		__HAL_RCC_USART3_CLK_ENABLE();
		
		/* Init pins */
		TM_USART3_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = USART3_IRQn;
	}
#endif
#ifdef UART4
	if (USARTx == UART4) {
		/* Enable UART clock */
		__HAL_RCC_UART4_CLK_ENABLE();
		
		/* Init pins */
		TM_UART4_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = UART4_IRQn;
	}
#endif
#ifdef UART5
	if (USARTx == UART5) {
		/* Enable UART clock */
		__HAL_RCC_UART5_CLK_ENABLE();

		/* Init pins */
		TM_UART5_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = UART5_IRQn;
	}
#endif
#ifdef USART6
	if (USARTx == USART6) {
		/* Enable UART clock */
		__HAL_RCC_USART6_CLK_ENABLE();
		
		/* Init pins */
		TM_USART6_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = USART6_IRQn;
	}
#endif
#ifdef UART7
	if (USARTx == UART7) {
		/* Enable UART clock */
		__HAL_RCC_UART7_CLK_ENABLE();
		
		/* Init pins */
		TM_UART7_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = UART7_IRQn;
	}
#endif
#ifdef UART8
	if (USARTx == UART8) {
		/* Enable UART clock */
		__HAL_RCC_UART8_CLK_ENABLE();

		/* Init pins */
		TM_UART8_InitPins(pinspack);
		
		/* Set IRQ channel */
		irq = UART8_IRQn;
	}
#endif

	/* Set USART baudrate */
	UARTHandle.Instance = USARTx;
	UARTHandle.Init.BaudRate = baudrate;

	/* Fill default settings */
	UARTHandle.Init.HwFlowCtl = FlowControl;
	UARTHandle.Init.Mode = Mode;
	UARTHandle.Init.Parity = Parity;
	UARTHandle.Init.StopBits = StopBits;
	UARTHandle.Init.WordLength = WordLength;
	/* FIXME: Added */
	UARTHandle.Init.OverSampling = UART_OVERSAMPLING_16;
	
	/* We are not initialized */
	u->Initialized = 0;

	/* Init */
	HAL_UART_Init(&UARTHandle);

	/* Enable RX interrupt */
	__HAL_UART_ENABLE_IT(&UARTHandle, UART_IT_RXNE);
	//USARTx->CR1 |= USART_CR1_RXNEIE;
	
	/* Set priority */
	HAL_NVIC_SetPriority(USART1_IRQn, USART_NVIC_PRIORITY, TM_USART_INT_GetSubPriority(USART1));

	/* Enable interrupt */
	HAL_NVIC_EnableIRQ(USART1_IRQn);

	/* We are initialized now */
	u->Initialized = 1;
	
}
